fix scrollbar jump

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,6 +13,11 @@ html,
 body {
 	min-height: 100%;
 }
+
+html {
+	overflow-x: hidden;
+}
+
 body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
@@ -69,10 +74,13 @@ body::-webkit-scrollbar-thumb {
 }
 
 .wrapper {
+	position: absolute;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	min-height: 100vh;
+	width: 100vw;
 	@include respond(small) {
 		padding: 8vw;
 		gap: 3rem;
